--- a/incident_forms/incident_forms/Views/incident/Index.cshtml
+++ b/incident_forms/incident_forms/Views/incident/Index.cshtml
@@ -25,7 +25,7 @@
         <button type="button" id="baloud" onclick="function getProtocol(){return window.location.href.indexOf('https')==0?'https':'http';}(function(){ if(navigator.userAgent.indexOf('MSIE')!=-1 && getProtocol()=='https'){ alert('You are viewing a secure website. We do not currently support BrowseAloud services on secure sites.');}else{document.getElementsByTagName('BODY')[0].appendChild(document.createElement('script')).src=getProtocol()+'://babm.texthelp.com/Bookmarklet.ashx?l=us';}})();" style="font-size:17px" class="btn btn-outline btn-primary  dim "><i class="fa fa-volume-up"></i> BROWSEALOUD</button>
 
     </div>
-    <!--Form introduction--->
+    <!--Form introduction---->
     <div id="introForm" class="row">
        
         <div class="col-md-12">
